WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132081
[New Multicolumn] fast/multicol/hit-test-* layout tests all fail
https://bugs.webkit.org/show_bug.cgi?id=132081
Summary
[New Multicolumn] fast/multicol/hit-test-* layout tests all fail
Dave Hyatt
Reported
2014-04-23 14:51:38 PDT
All four of the hit-test-* layout tests fail. Could just be pixel differences, but might be actual bugs here.
Attachments
Patch
(33.32 KB, patch)
2014-04-25 13:02 PDT
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-04-25 10:38:09 PDT
I think this boils down to positionForPoint on RenderMultiColumnSet needing to work with logical coordinates instead of treating the point passed in as physical.
Dave Hyatt
Comment 2
2014-04-25 13:02:19 PDT
Created
attachment 230193
[details]
Patch
Dean Jackson
Comment 3
2014-04-25 13:19:41 PDT
Comment on
attachment 230193
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=230193&action=review
> LayoutTests/fast/multicol/newmulticol/compare-with-old-impl/hit-test-above-or-below.html:31 > + log ("Character at " + x + ", " + y + " is " + character + " as expected."); > + else > + log ("FAIL: Character at " + x + ", " + y + " is " + actualCharacter + ". Expected " + character + ".");
Nit: extra space after log
Dave Hyatt
Comment 4
2014-04-25 13:21:20 PDT
Fixed in
r167817
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug