Source/WebCore/rendering/RenderMultiColumnSet.h
@@ -119,6 +119,14 @@ public:
     
     void paintColumnRules(PaintInfo&, const LayoutPoint& paintOffset);
 
+    enum ColumnHitTestTranslationMode {
+        ClampHitTestTranslationToColumns,
+        DoNotClampHitTestTranslationToColumns
+    };
+    LayoutPoint translateRegionPointToFlowThread(const LayoutPoint & logicalPoint, ColumnHitTestTranslationMode = DoNotClampHitTestTranslationToColumns) const;
+
+    virtual void updateHitTestResult(HitTestResult&, const LayoutPoint&) override;
+    
 protected:
     void addOverflowFromChildren() override;
     
